# chungyak-box

./: .env  .gitignore  docker-compose.yml
.github/workflows/: call-chungyak-box.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: crud.py  models.py  schemas.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 07c568ffc274_add_user_withdrawal_table_and_cascade_.py  1a81ae96bc9c_add_socialaccount_model_and_remove_.py  1c91d273cfc4_add_timezone_to_.py  45fb49755618_make_user_hashed_password_nullable.py  59acdbe1a2a5_rename_calculator_input_to_calculation_.py  65a0c026ca09_add_hosingsubscriptiondetail_model.py  6a060b1641e7_dummy_fix.py  6de4152aa952_add_terms_and_useragreement_tables.py  ccd26c6c5dd5_initial_commit.py  e8763be0e4bb_alter_userwithdrawal_withdrawn_at_to_.py  ec0cc10ab699_rename_email_to_hashed_email_and_update_.py
backend/app/api/: main.py
backend/app/api/routes/: housing_subscription_detail.py  login.py  payment_schedule.py  private.py  signup.py  social_login.py  terms.py  user.py
backend/app/core/: config.py  db.py  security.py
backend/app/services/: recognized_date_calc.py
backend/app/tests/: conftest.py
backend/app/tests/api/routes/: test_housing_subscription_detail.py  test_login.py  test_payment_schedule.py  test_private.py  test_signup.py  test_social_login.py  test_user.py
backend/app/tests/services/: test_recognition_calculator.py
backend/app/tests/utils/: user.py  utils.py
frontend/: .gitignore  ARCHITECTURE.md  pubspec.yaml
frontend/android/: build.gradle.kts  gradle.properties
(+125 files in other folders)
